--- a/Managing Packages with NPM/boilerplate-npm/package.json
+++ b/Managing Packages with NPM/boilerplate-npm/package.json
@@ -22,8 +22,8 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0"
-		"@ifreecodecamp/example": "1.1.0"
+		"express": "^4.14.0",
+		"@ifreecodecamp/example": "1.2.13"
 	},
 	"devDependencies": {}
 }
