Use the Caret-Character to Use the Latest Minor Version of a Dependency

--- a/Managing Packages with NPM/boilerplate-npm/package.json
+++ b/Managing Packages with NPM/boilerplate-npm/package.json
@@ -23,7 +23,7 @@
 	},
 	"dependencies": {
 		"express": "^4.14.0",
-		"@ifreecodecamp/example": "~1.2.13"
+		"@ifreecodecamp/example": "^1.2.13"
 	},
 	"devDependencies": {}
 }
