--- a/Basic Node and Express/boilerplate-express/package.json
+++ b/Basic Node and Express/boilerplate-express/package.json
@@ -1,15 +1,21 @@
 {
   "name": "fcc-learn-node-with-express",
   "version": "0.1.0",
+  "description": "Example",
+  "license": "MIT",
+  "author": "AcheronX0577",
+  "type": "commonjs",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.14.0",
-    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+    "fcc-express-bground": "git+https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
   },
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  }
+  "devDependencies": {},
+  "keywords": []
 }
